sprint4/tests/error/14_function_return.py
# Incorrect type in assignment involving function return type
#
def func() -> int:
	return 1

a: str = func()
